fixed filter z-index

--- a/app/less/app.less
+++ b/app/less/app.less
@@ -12,6 +12,7 @@ html, body, #map{
   background-color:@base;
   top: 100px;
   left: 30px;
+  z-index:5;
 }
 
 .popup {
@@ -128,7 +129,7 @@ header {
 }
 
 #index-container {
-  width:80%;
+  width:50%;
   margin:0 auto;
   padding-top: 100px;
 }
@@ -208,6 +209,7 @@ button {
   border-radius: 3px;
   background-color: @base;
   float:left;
+  
   //margin: 15px 0 0 15px;
   // position:absolute;
   // left:15px;
